--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+Brotli==1.1.0
 click==8.1.7
 Django==4.2.15
 django-ckeditor==6.7.1
@@ -10,3 +11,4 @@ packaging==24.1
 pillow==10.4.0
 sqlparse==0.5.1
 uvicorn==0.30.6
+whitenoise==6.7.0
